--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,27 @@
 name = "utoipa_helper"
 version = "0.1.0"
 edition = "2024"
+description = "Helper For utoipa_axum"
+license = "MIT"
 
 [dependencies]
+axum = { version = "0.8", features = ["multipart"] }
+rust_decimal = {version="1.37", features=["db-tokio-postgres"]}
+derive_more = {version="2.0", features=["full"]}
+serde = { version="1.0", features=["derive"] }
+serde_json = "1.0"
+time = {version="0.3", features = ["serde-human-readable"], optional = true}
+tokio = {version="1.43", features=["rt", "macros", "rt-multi-thread"]}
+utoipa = { version = "5.3", features = ["axum_extras", "yaml", "time", "uuid", "smallvec", "url", "openapi_extensions", "decimal"] }
+utoipa-axum = { version = "0.2" }
+utoipa-helper-macro = {path = "./utoipa_helper_macro"}
+utoipa-redoc = {version="6.0", features=["axum"]}
+utoipa-rapidoc = {version="6.0", features=["axum"]}
+utoipa-swagger-ui = { version = "9.0" , features = ["axum"] }
+uuid = {version="1.1", features=["serde", "v4"]}
+
+[dev-dependencies]
+reqwest = {version = "0.12", default-features = false, features=["cookies", "rustls-tls", "gzip", "json"]}
+
+[features]
+default = ["time"]
