--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "utoipa_helper"
-version = "0.1.0"
+name = "utoipa-helper"
+version = "0.1.1"
 edition = "2024"
 description = "Helper For utoipa_axum"
 license = "MIT"
