--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 axum = "0.8"
 serde = "1.0"
 utoipa = "5.4"
-utoipa-helper-macro = {path = "./utoipa_helper_macro"}
+utoipa-helper-macro = {version="0.1.6", path = "./utoipa_helper_macro"}
 
 [dev-dependencies]
 derive_more = {version="2.0", features=["full"]}
